--- a/Codeforces/README
+++ b/Codeforces/README
@@ -4,7 +4,7 @@ Hello Github!
 Hello Codeforces!
 *****************
 
-This is a repository which stores all my Codeforces problems source code, most of them are solved using Python. Since I am a new comer to Python, I want to improve my Python skill by solving simple problem @Codeforces.
+This is a repository which stores all my Codeforces problems source code, most of them are solved using Python or Ruby.
 
 Thanks Github for its great role in community of programming enthusiasts.
 
